Cleaned up code
+ Removed stray imports
+ Motd uses TextUtils.tryParse instead of Component.Serializer.fromJson
+ Renamed BackendMessageWidget to BackendMotdWidget for clarity
+ Fixed a compiler error I accidentally pushed... oops
+ Removed white space after some comments